Changed tweak to work with iPhone 8.

--- a/control
+++ b/control
@@ -1,10 +1,10 @@
-Package: com.shivesh.taptoviewnotification
+Package: com.domg.taptoviewnotification
 Name: TapToViewNotification
-Description: A simple tweak to view notifications on tap on the lock screen. Especially useful on an SE which doesn't support this on long press.
-Version: 1.0.0
+Description: A tweak that fixes haptic feedback on notifications for iPhone 8. Original creator: mmshivesh
+Version: 1.0.1
 Priority: optional
 Section: Tweaks
 Architecture: iphoneos-arm
 Depends: mobilesubstrate, firmware (>=13.0)
-Maintainer: Shivesh <mmshivesh@gmail.com>
-Author: Shivesh <mmshivesh@gmail.com>
+Maintainer: Domg <dom.gregori@gmail.com>
+Author: Domg <dom.gregori@gmail.com>
